Fix overflow issue on `html`

--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -19,6 +19,7 @@ div.instanceDiv * {
 html {
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 div.instanceDiv {
